# Iris_Integrated-Runtime-Intelligence-Service

./: .anomalies  .env.example  .eslintrc.js  .gitignore  .npmignore  .usage-data  .usage-log  CAPABILITIES.md  CHANGELOG.md  COMPARISONS.md  CONTRIBUTING.md  ENHANCEMENT_SUMMARY.md  INSTALL.md  LICENSE  PATENT_STRATEGY.md  QUICKSTART.md  README.md  README_IRIS_ENHANCED.md  README_OPTIMIZED.md  REPOSITORY_STATUS.md  SECURITY.md  ci.yml.backup  demo-file.js  diagnose-api-error.js  gemini_integration.py  install.sh  llama2_integration.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run-iris.sh  security-scan.sh  setup.js  setup.sh  start.sh  test-api-integration.js  test-iris-basic.js  test-vscode-features.js  test_optimized_system.py
config/: gemini-config.example.json  iris-config.json  llama2-config.example.json  multi-ai.json
docs/: api-reference.md  configuration.md  installation.md  troubleshooting.md  use-cases.md
examples/: basic-usage.js  basic_usage.py  comparative_analysis.py  performance_monitoring.py  trainable_extension.py
src/: __init__.py  cli.js  enhanced-ai.js  index.js  mcp_server.py  multi_ai_integration.py  optimized-ai-system.py
src/commands/: vscode-commands.js
src/core/: ai-router.js  api-validator.js  diagnostics.js  error-handler.js  error-recovery.js  integrity-checker.js  license-validator.js  message-formatter.js  neural-learning.js  provider-manager.js  request-handler.js  self-healing-handler.js  usage-monitor.js
src/integrations/: github.js  google-tools.js  vscode-features.js
src/providers/: builtin-provider.js  claude-provider.js  cohere-provider.js  gemini-provider.js  groq-provider.js  huggingface-provider.js  ollama-provider.js  openai-provider.js  together-provider.js
tests/: __init__.py  basic-system-test.py  test-runner.js  test_system.py
